test/files/neg/t12565.check
t12565.scala:5: error: java.time.Instant does not have a constructor
  def f = new java.time.Instant
          ^
1 error
